build script updates