@@ -22,13 +22,27 @@
 
 package password.pwm.health;
 
+import password.pwm.AppProperty;
 import password.pwm.PwmApplication;
+import password.pwm.PwmConstants;
 import password.pwm.config.Configuration;
+import password.pwm.config.LdapProfile;
+import password.pwm.config.PwmSetting;
+import password.pwm.config.PwmSettingSyntax;
+import password.pwm.config.option.DataStorageMethod;
+import password.pwm.config.option.MessageSendMethod;
 import password.pwm.i18n.Admin;
 import password.pwm.i18n.LocaleHelper;
+import password.pwm.servlet.NewUserServlet;
 import password.pwm.util.PwmLogger;
+import password.pwm.util.operations.PasswordUtility;
 
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
@@ -44,7 +58,6 @@ public class ConfigurationChecker implements HealthChecker {
 
         final Configuration config = pwmApplication.getConfig();
         final List<HealthRecord> records = new ArrayList<HealthRecord>();
-        /*
 
         if (config.readSettingAsBoolean(PwmSetting.HIDE_CONFIGURATION_HEALTH_WARNINGS)) {
             return records;
@@ -77,28 +90,33 @@ public class ConfigurationChecker implements HealthChecker {
             records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_ShowDetailedErrors", value)));
         }
 
-        if (config.readSettingAsString(PwmSetting.LDAP_TEST_USER_DN) == null || config.readSettingAsString(PwmSetting.LDAP_TEST_USER_DN).length() < 1 ) {
-            final String value = PwmSetting.LDAP_TEST_USER_DN.getCategory().getLabel(PwmConstants.DEFAULT_LOCALE)
-                    + " -> " + PwmSetting.LDAP_TEST_USER_DN.getLabel(PwmConstants.DEFAULT_LOCALE);
-            records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_AddTestUser", value)));
+        for (final LdapProfile ldapProfile : config.getLdapProfiles().values()) {
+            final String testUserDN = ldapProfile.readSettingAsString(PwmSetting.LDAP_TEST_USER_DN);
+            if (testUserDN == null || testUserDN.length() < 1 ) {
+                final String value = PwmSetting.LDAP_TEST_USER_DN.getCategory().getLabel(PwmConstants.DEFAULT_LOCALE)
+                        + " -> " + PwmSetting.LDAP_TEST_USER_DN.getLabel(PwmConstants.DEFAULT_LOCALE);
+                records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_AddTestUser", value)));
+            }
         }
 
         {
-            final List<String> ldapServerURLs = config.readSettingAsStringArray(PwmSetting.LDAP_SERVER_URLS);
-            if (ldapServerURLs != null && !ldapServerURLs.isEmpty()) {
-                for (final String urlStringValue : ldapServerURLs) {
-                    try {
-                        final URI url = new URI(urlStringValue);
-                        final boolean secure = "ldaps".equalsIgnoreCase(url.getScheme());
-                        if (!secure) {
+            for (final LdapProfile ldapProfile : config.getLdapProfiles().values()) {
+                final List<String> ldapServerURLs = ldapProfile.readSettingAsStringArray(PwmSetting.LDAP_SERVER_URLS);
+                if (ldapServerURLs != null && !ldapServerURLs.isEmpty()) {
+                    for (final String urlStringValue : ldapServerURLs) {
+                        try {
+                            final URI url = new URI(urlStringValue);
+                            final boolean secure = "ldaps".equalsIgnoreCase(url.getScheme());
+                            if (!secure) {
+                                final String value = PwmSetting.LDAP_SERVER_URLS.getCategory().getLabel(PwmConstants.DEFAULT_LOCALE)
+                                        + " -> " + PwmSetting.LDAP_SERVER_URLS.getLabel(PwmConstants.DEFAULT_LOCALE);
+                                records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_LDAPUnsecure", value, urlStringValue)));
+                            }
+                        } catch (URISyntaxException e) {
                             final String value = PwmSetting.LDAP_SERVER_URLS.getCategory().getLabel(PwmConstants.DEFAULT_LOCALE)
                                     + " -> " + PwmSetting.LDAP_SERVER_URLS.getLabel(PwmConstants.DEFAULT_LOCALE);
-                            records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_LDAPUnsecure", value, urlStringValue)));
+                            records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_LDAPParseError", value, urlStringValue)));
                         }
-                    } catch (URISyntaxException  e) {
-                        final String value = PwmSetting.LDAP_SERVER_URLS.getCategory().getLabel(PwmConstants.DEFAULT_LOCALE)
-                                + " -> " + PwmSetting.LDAP_SERVER_URLS.getLabel(PwmConstants.DEFAULT_LOCALE);
-                        records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication, "Health_Config_LDAPParseError", value, urlStringValue)));
                     }
                 }
             }
@@ -120,12 +138,12 @@ public class ConfigurationChecker implements HealthChecker {
             final String novellUserAppURL = config.readSettingAsString(PwmSetting.EDIRECTORY_PWD_MGT_WEBSERVICE_URL);
             if (novellUserAppURL != null && novellUserAppURL.length() > 0) {
                 try {
-                    final URL url = new URL(novellUserAppURL);
-                    final boolean secure = "https".equalsIgnoreCase(url.getProtocol());
+                    final URI url = new URI(novellUserAppURL);
+                    final boolean secure = "https".equalsIgnoreCase(url.getScheme());
                     if (!secure) {
                         records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, "UserApp Password SOAP Service URL is not secure (https)"));
                     }
-                } catch (MalformedURLException e) {
+                } catch (URISyntaxException e) {
                     LOGGER.debug("error parsing Novell PwdMgt Web Service URL: " + e.getMessage());
                     records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, "error parsing Novell PwdMgt Web Service URL: " + e.getMessage()));
                 }
@@ -143,12 +161,9 @@ public class ConfigurationChecker implements HealthChecker {
             }
         }
 
-        //if (pwmApplication.getConfigReader().modifiedSincePWMSave()) {
-        //    records.add(new HealthRecord(HealthStatus.CAUTION, TOPIC, "Configuration file has been modified outside of PWM.  Please edit and save the configuration using the ConfigManager to be sure all settings are valid."));
-        //}
 
         if (!config.hasDbConfigured()) {
-            if (config.shouldHaveDbConfigured()) {
+            if (config.helper().shouldHaveDbConfigured()) {
                 records.add(new HealthRecord(HealthStatus.CONFIG, TOPIC, localizedString(pwmApplication,"Health_Config_MissingDB")));
             }
         }
@@ -167,12 +182,13 @@ public class ConfigurationChecker implements HealthChecker {
         }
 
         {
-            final List<HealthRecord> healthRecords = NewUserServlet.checkConfiguration(config,PwmConstants.DEFAULT_LOCALE);
+            final List<HealthRecord> healthRecords = NewUserServlet.checkConfiguration(config,
+                    PwmConstants.DEFAULT_LOCALE);
             if (healthRecords != null && !healthRecords.isEmpty()) {
                 records.addAll(healthRecords);
             }
         }
-*/
+
         return records;
     }
 
